* Wed Mar 18 2026 Brian Read <brianr@koozali.org> 11.0.0-185.sme - Missing use in dnf.pm [SME: 13472] - Adjust format around theme selector and fix overlap causing click to be ignored. [SME: 13472]

--- a/root/usr/share/smanager/themes/default/public/css/new_sme.css
+++ b/root/usr/share/smanager/themes/default/public/css/new_sme.css
@@ -187,11 +187,11 @@
 
 #main {
     margin-left: 200px;
-    padding: 10px;
+    padding-left: 10px;
 }
 
 #central {
-    padding: 5px;
+    padding: 0px;
 }
 
 #footer {
@@ -209,7 +209,7 @@
     padding: 5px;
     background-color: #E8F3E1;
     overflow: auto;
-    margin-top:20px;
+    margin-top:2px;
 }
 
 #footer img {
